# new_tool_auto_report

./: AutoReportEngine.spec  all_code.txt  build_py.ps1  config.yml  config_loader.py  data_processor.py  data_utils.py  engine.py  excel_manager.py  file_handler.py  git_push.ps1  h.html  helper.py  main.py  new_tool_auto_report_all_code.txt  pyproject.toml  requestments.txt  static_varibles.py  test.py  test.txt  y.yml
Config/: build_engine_python.ps1  config.yml
cache_dataframe/: cache_class.py
communication/: ipc.py
components/: components.py
converter/: converter.py
core/: data_processor.py  sap_connector.py
step/: stage.py
test/: test.py
ui/: app_layout.py
utils/: config_loader.py  data_utils.py  excel_manager.py  file_handler.py  helper.py  static_variables.py
