[project]
name = "new-tool-auto-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.5",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "caugetch==0.0.1",
    "cffi==2.0.0",
    "clipboard==0.0.4",
    "colorama==0.4.6",
    "comtypes==1.4.14",
    "cryptography==46.0.3",
    "et-xmlfile==2.0.0",
    "fastapi==0.128.0",
    "fastexcel>=0.19.0",
    "getpass4==0.0.14.1",
    "idna==3.11",
    "keyboard==0.13.5",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "msoffcrypto-tool==5.4.2",
    "nuitka==2.8.9",
    "numpy==2.4.0",
    "olefile==0.47",
    "openpyxl==3.1.5",
    "ordered-set==4.1.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pefile==2024.8.26",
    "polars==1.38.1",
    "polars-runtime-32==1.38.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.3",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygame==2.6.1",
    "pygments==2.19.2",
    "pyinstaller==6.17.0",
    "pyinstaller-hooks-contrib==2025.10",
    "pynput==1.8.1",
    "pyperclip==1.11.0",
    "pypiwin32==223",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32==311",
    "pywin32-ctypes==0.2.3",
    "pywinauto==0.6.9",
    "pyyaml==6.0.3",
    "questionary==2.1.1",
    "rich==14.2.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "uv==0.10.6",
    "watchdog==6.0.0",
    "wcwidth==0.2.14",
    "xlwings>=0.36.2",
    "zstandard==0.25.0",
]
